.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/monitoringconfigmaps.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2026-01-28T09:44:26Z"
  generation: 2
  labels:
    app.kubernetes.io/managed-by: cluster-version-operator
    app.kubernetes.io/part-of: openshift-monitoring
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:include.release.openshift.io/hypershift: {}
          f:include.release.openshift.io/ibm-cloud-managed: {}
          f:include.release.openshift.io/self-managed-high-availability: {}
          f:include.release.openshift.io/single-node-developer: {}
          f:service.beta.openshift.io/inject-cabundle: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/part-of: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
      f:webhooks:
        .: {}
        k:{"name":"monitoringconfigmaps.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchConditions:
            .: {}
            k:{"name":"monitoringconfigmaps"}:
              .: {}
              f:expression: {}
              f:name: {}
            k:{"name":"not-skipped"}:
              .: {}
              f:expression: {}
              f:name: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-version-operator
    operation: Update
    time: "2026-01-28T09:44:26Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"monitoringconfigmaps.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2026-01-28T09:44:26Z"
  name: monitoringconfigmaps.openshift.io
  ownerReferences:
  - apiVersion: config.openshift.io/v1
    controller: true
    kind: ClusterVersion
    name: version
    uid: 0370d296-6904-481d-ab90-157c7e5b835a
  resourceVersion: "24155"
  uid: 6fd0e8f9-3a53-41f6-950f-6108d17c4d8a
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJRXcwTy9pcFdJYVl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjMk9UVTVNall6TlRBZQpGdzB5TmpBeE1qZ3dPVE13TXpSYUZ3MHlPREF6TWpnd09UTXdNelZhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNOamsxT1RJMk16VXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzZEZ0llNFg4czRKa0JKSnJSWDMzNlBpUHh5dkxGOGtLOApsWE1ISGZCbHRzQl [...]
    service:
      name: cluster-monitoring-operator
      namespace: openshift-monitoring
      path: /validate-webhook/monitoringconfigmaps
      port: 8443
  failurePolicy: Ignore
  matchConditions:
  - expression: (request.namespace == "openshift-monitoring" && request.name == "cluster-monitoring-config")
      || (request.namespace == "openshift-user-workload-monitoring" && request.name
      == "user-workload-monitoring-config")
    name: monitoringconfigmaps
  - expression: '!has(object.metadata.labels) || !("monitoringconfigmaps.openshift.io/skip-validate-webhook"
      in object.metadata.labels) || object.metadata.labels["monitoringconfigmaps.openshift.io/skip-validate-webhook"]
      != "true"'
    name: not-skipped
  matchPolicy: Equivalent
  name: monitoringconfigmaps.openshift.io
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: In
      values:
      - openshift-monitoring
      - openshift-user-workload-monitoring
  objectSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - configmaps
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
