.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/network-node-identity.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-01-28T09:40:17Z"
  generation: 1
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:ownerReferences:
          k:{"uid":"7763cebb-f1d7-4359-81b8-b55ef9916383"}: {}
      f:webhooks:
        k:{"name":"node.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
        k:{"name":"pod.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2026-01-28T09:40:17Z"
  name: network-node-identity.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: 7763cebb-f1d7-4359-81b8-b55ef9916383
  resourceVersion: "18627"
  uid: 10749976-f0c6-4c9d-915f-227d71b33481
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJQlZRVXAzd1ZHcDh3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjMk9UVTVNalUzTVRBZUZ3MHlOakF4TWpnd09USTVNekJhRncwek5qQXhNall3Ck9USTVNekZhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM05qazFPVEkxTnpFd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/node
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: node.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - nodes/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJQlZRVXAzd1ZHcDh3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjMk9UVTVNalUzTVRBZUZ3MHlOakF4TWpnd09USTVNekJhRncwek5qQXhNall3Ck9USTVNekZhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM05qazFPVEkxTnpFd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/pod
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: pod.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - pods/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
